frontend-deployment-DevOps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
      matchLabels:
        app: frontend
  replicas: 1
  template:
      metadata:
        labels:
            app: frontend
      spec:
        imagePullSecrets:
        - name: acr-auth
        containers:
        - name: frontend
          image: #{LoginServer}#/frontend:#{Build.BuildId}#
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            httpGet:
              port: 8080
              path: /
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080       
          volumeMounts:
          - mountPath: "/mnt/azure"
          name: volume      
      volumes:
      - name: volume
        persistentVolumeClaim:
        claimName: frontend-managed-disk
